minor mistakes being edited

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 						</div>
 
 						<div class="timeline-content">
-							<h4>UUVa School of Data Science</h4>
+							<h4>UVa School of Data Science</h4>
 							<p>I worked with Professor Luis Felipe Rosado Murillo on the deployment of an environmental sensing LoRa network across Charlottesville. As an offshoot of the larger SIF Grant for Networked Public Spaces at University of Virginia, I performed a number of tasks to accelerate the growth of the network. 
 							
 							<br> <br>
@@ -321,7 +321,7 @@
 
 						<div class="timeline-content">
 							<h4>UVa School of Engineering and Applied Sciences</h4>
-							<p>The Computer Engineering program at UVA focuses on teaching the fundamentals of both a CS and an EE degree. I chose to focus my credits on low-level aspects of the computing stack and fundamentals of CS, so relevant coursework includes Embedded Systems, Embedded Real Time Operating Systems, Digital Signal Processing, Fundamentals of Electrical Engineering, Digital Logic, Hardware / Software Security, VLSI Design, and Algorithms. 
+							<p>The Computer Engineering program at UVa focuses on teaching the fundamentals of both a CS and an EE degree. I chose to focus my credits on low-level aspects of the computing stack and fundamentals of CS, so relevant coursework includes Embedded Systems, Embedded Real Time Operating Systems, Digital Signal Processing, Fundamentals of Electrical Engineering, Digital Logic, Hardware / Software Security, VLSI Design, and Algorithms. 
 
 							<br> <br>
 
@@ -543,7 +543,7 @@
 							Making use of an SPI temperature sensor, an I2C LCD screen, the CC3220F LaunchPad, and substantial power electronics surrounding it, this system collected temperature readings, processed them in 32-bit fixed-point arithmetic, and modulated lamp intensity as an integer number of AC half-cycles. At the same time, it also sampled user input from a joystick / button combo and published to a simple website. I developed the whole fixed-point library and the drivers for our external hardware in embedded C, integrating it all in a PID control loop application hosted on TI-RTOS. I also helped with the electronics schematic design and oscilloscope debugging as we pieced the system together.
 							</p>
 
-							<div class="categories">Embedded Programming</div>
+							<div class="categories">Embedded Programming, Digital Signal Processing, Hardware Design</div>
 						</div>
 
 						<div class="link-box">
