updated some content on the site, the behavior of the KARDS button, and the actual resume content

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 				<a class="menu-toggle" href="#"><span>Menu</span></a>
 
 				<div class="logo">
-					<a href="index.html">KARDS</a>
+					<a class="menu-toggle" href="#">Menu</a>
 				</div>
 
 				<nav id="main-nav-wrap">
@@ -144,16 +144,12 @@
 						<strong>Debug Tools</strong>
 					</li>
 					<li>
-						<div class="progress percent80"><span>80%</span></div>
-						<strong>Protocols</strong>
-					</li>
-					<li>
-						<div class="progress percent75"><span>75%</span></div>
-						<strong>Scripting</strong>
-					</li>
-					<li>
-						<div class="progress percent75"><span>75%</span></div>
+						<div class="progress percent85"><span>85%</span></div>
 						<strong>Hardware Tools</strong>
+					</li>
+					<li>
+						<div class="progress percent75"><span>75%</span></div>
+						<strong>Protocols</strong>
 					</li>
 				</ul> <!-- /skill-bars -->
 
