--- a/index.html
+++ b/index.html
@@ -661,8 +661,8 @@
 				<h5>Where to find me</h5>
 
 				<p>
-					Middletown, NY<br>
-					10941 US
+					San Antonio, TX<br>
+					78240 US
 				</p>
 
 			</div>
